--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>src</groupId>
-  <artifactId>FullLoad</artifactId>
+  <groupId>Scala</groupId>
+  <artifactId>FullLoadTest</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <properties>
@@ -80,7 +80,7 @@
           <archive>
             <manifest>
               <addClasspath>true</addClasspath>
-              <mainClass>src.FullLoad</mainClass>
+              <mainClass>scala.FullLoadTest</mainClass>
             </manifest>
           </archive>
         </configuration>
