--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>Scala</groupId>
+  <groupId>scalatest</groupId>
   <artifactId>FullLoadTest</artifactId>
   <version>1.0-SNAPSHOT</version>
 
@@ -80,7 +80,7 @@
           <archive>
             <manifest>
               <addClasspath>true</addClasspath>
-              <mainClass>scala.FullLoadTest</mainClass>
+              <mainClass>scalatest.FullLoadTest</mainClass>
             </manifest>
           </archive>
         </configuration>
