--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-client</artifactId>
             <version>${hbase.version}</version>
+		</dependency>
 
     </dependencies>
     <build>
