Update the scala-lang dependency pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,13 @@
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-client</artifactId>
             <version>${hbase.version}</version>
-		</dependency>
+	</dependency>
+	    <!-- Scala Library -->
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>${scala.version}</version>
+        </dependency>
 
     </dependencies>
     <build>
