--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
             <version>${scala.version}</version>
         </dependency>
 
+	<dependency>
+    	    <groupId>org.apache.htrace</groupId>
+    	    <artifactId>htrace-core</artifactId>
+    	    <version>4.2.0-incubating</version> 
+	</dependency>
+
     </dependencies>
     <build>
         <plugins>
