--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 	<dependency>
     	    <groupId>org.apache.htrace</groupId>
     	    <artifactId>htrace-core</artifactId>
-    	    <version>4.2.0-incubating</version> 
+    	    <version>3.0.4</version>
 	</dependency>
 
     </dependencies>
