--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>scala_jenkins.Increamentalload</mainClass>
+                            <mainClass>com.example.MyMainClass</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
