--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>scalatest</groupId>
-  <artifactId>FullLoadTest</artifactId>
+  <artifactId>Hive_Data_Validation</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <properties>
@@ -80,7 +80,7 @@
           <archive>
             <manifest>
               <addClasspath>true</addClasspath>
-              <mainClass>scalatest.FullLoadTest</mainClass>
+              <mainClass>scalatest.Hive_Data_Validation</mainClass>
             </manifest>
           </archive>
         </configuration>
