--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>scala_spark</groupId>
     <artifactId>ScalaSparkIngestion</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <properties>
         <scala.version>2.11.12</scala.version>
@@ -90,7 +90,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>scala_spark.LoadFirst</mainClass>
+                            <mainClass>scala_spark.IncrementalLoad</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
